--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -11,7 +11,7 @@
 #pbOverlay{
 	opacity:0; overflow:hidden; width:100%; height:100%; position:fixed; z-index:9999; left:0; top:0; text-align:center; pointer-events:none;
 	-moz-user-select:none;
-	background:rgba(0,0,0,0.90);
+	background:rgba(0,0,0,.90);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e2000000', endColorstr='#e2000000');
 	/* background:radial-gradient(rgba(0,0,0,.6) 0%, rgba(0,0,0,.9) 100%); */
 	-webkit-transform:translate3d(0);
@@ -24,10 +24,10 @@
 @keyframes pbLoaderFrames{ 50%{ height:5px; } }
 @-webkit-keyframes pbLoaderFrames{ 50%{ height:5px; } }
 
-.pbLoader{ display:none; width:100px; height:100px; position:absolute; z-index:999; top:0; left:0; right:0; bottom:0; margin:auto; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset, 0 0 20px; transition:0.3s; }
+.pbLoader{ display:none; width:100px; height:100px; position:absolute; z-index:999; top:0; left:0; right:0; bottom:0; margin:auto; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset, 0 0 20px; transition:.3s; }
 .thumbs .pbLoader{ -webkit-transform:translateY(-50px); transform:translateY(-50px); }
 .pbLoading:not(.msie):not(.error) .pbLoader{ display:block; }
-	.pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,0.8); box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
+	.pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,.8); box-shadow:0 0 10px rgba(0,0,0,.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
 	.pbLoader b:nth-child(2){ -webkit-animation-delay:.3s; animation-delay:.3s; }
 	.pbLoader b:nth-child(3){ -webkit-animation-delay:.6s; animation-delay:.6s; }
 
@@ -36,13 +36,13 @@
 .pbWrapper:after,
 #pbCaption .pbThumbs ul:after,
 #pbOverlay .prevNext:after,
-#pbOverlay .pbLoader:before{ content:""; display:inline-block; height:100%; margin-right:-0.25em; vertical-align:middle; }
+#pbOverlay .pbLoader:before{ content:""; display:inline-block; height:100%; margin-right:-.25em; vertical-align:middle; }
 
 /* Animation when image was not loaded */
-@keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); transform:scale(0.85); } }
-@-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(0.85); } }
+@keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); transform:scale(.85); } }
+@-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(.85); } }
 
-.pbWrapper{ -moz-box-sizing:border-box; box-sizing:border-box; transform:rotate(0deg); vertical-align:middle; height:100%; perspective:1200px; position:relative; transition:0.2s; }
+.pbWrapper{ -moz-box-sizing:border-box; box-sizing:border-box; transform:rotate(0deg); vertical-align:middle; height:100%; perspective:1200px; position:relative; transition:.2s; }
 .video > .pbWrapper{ z-index:11; display:inline-block; }
 	/*#pbOverlay.error .pbWrapper{ display:inline-block; width:100%; }*/
 	.pbLoading .pbWrapper{ display:inline-block\9; width:100%; } /* ie8+9 hack */
@@ -51,19 +51,19 @@
 	.thumbs .pbWrapper{ padding:0; margin:0; }
 	.error .pbWrapperr img{ width:0; }
 
-	.pbWrapper > div{ display:none; width:624px; height:351px; vertical-align:middle; border-radius:5px; background:rgba(0,0,0,0.5); }
+	.pbWrapper > div{ display:none; width:624px; height:351px; vertical-align:middle; border-radius:5px; background:rgba(0,0,0,.5); }
 	.video > .pbWrapper > div{ display:inline-block; }
 
 	#pbOverlay iframe,
 	#pbOverlay embed,
-	#pbOverlay object{ display:block; width:100%; height:100%; opacity:1; transition:0.5s; }
+	#pbOverlay object{ display:block; width:100%; height:100%; opacity:1; transition:.5s; }
 
 	.pbWrapper .pbHide iframe{ opacity:0; }
 
 	.pbWrapper > div,
 	.pbWrapper > img{
 		-ms-transition:.3s .5s ease-out;
-		transition:.8s .5s cubic-bezier(0.1, 0.87, 0.48, 1);
+		transition:.8s .5s cubic-bezier(.1, .87, .48, 1);
 
 		-webkit-transform:none;
 		-ms-transform:none;
@@ -95,7 +95,7 @@
 .on #pbCloseBtn{ top:-2px; right:-2px; }
 
 #pbCloseBtn:before{ content:'\00D7'; font:bold 1em/1 arial; }
-#pbCloseBtn:before, #pbAutoplayBtn:before{ display:inline-block; height:35px; width:35px; padding:8px 8px 12px 12px; font-size:2em; opacity:0.8; vertical-align:middle; background:rgba(255,255,255,0.2); border-radius:0 0 0 70px; transition:0.1s ease-out; }
+#pbCloseBtn:before, #pbAutoplayBtn:before{ display:inline-block; height:35px; width:35px; padding:8px 8px 12px 12px; font-size:2em; opacity:.8; vertical-align:middle; background:rgba(255,255,255,.2); border-radius:0 0 0 70px; transition:.1s ease-out; }
 #pbCloseBtn:hover:before{ padding:15px 10px 24px 24px; background:rgba(255,100,100,.4); }
 
 /*-- autoplay controller --*/
@@ -107,7 +107,7 @@
 	#pbAutoplayBtn:active:before{ text-shadow:0 0 3px #FFF, 0 0 6px #FFF; }
 	#pbAutoplayBtn.play:before{ content:'\25BA'; }
 
-	#pbAutoplayBtn .pbProgress{ display:none\9; width:100%; height:100%; overflow:hidden; position:absolute; padding:6px; top:0; left:0; opacity:0.2; transform:rotateZ(0deg); -webkit-transform:rotateZ(0deg); -ms-transform:rotateZ(0deg); -webkit-transform-origin:0 0; -ms-transform-origin:0 0; transform-origin:0 0; -webkit-transition:0.3s; -ms-transition:0.3s; transition:0.3s; }
+	#pbAutoplayBtn .pbProgress{ display:none\9; width:100%; height:100%; overflow:hidden; position:absolute; padding:6px; top:0; left:0; opacity:.2; transform:rotateZ(0deg); -webkit-transform:rotateZ(0deg); -ms-transform:rotateZ(0deg); -webkit-transform-origin:0 0; -ms-transform-origin:0 0; transform-origin:0 0; -webkit-transition:.3s; -ms-transition:.3s; transition:.3s; }
 	.mobile #pbAutoplayBtn .pbProgress{ -webkit-transition:0s; -ms-transition:0s; transition:0s; }
 	#pbAutoplayBtn.playing .pbProgress{ -webkit-transform:rotateZ(90deg); -ms-transform:rotateZ(90deg); transform:rotateZ(90deg); }
 	#pbAutoplayBtn .pbProgress:before{ content:''; position:absolute; right:0; bottom:0; width:200%; height:200%; border-radius:50%; box-shadow:0 0 0 8px #FFF inset; }
@@ -116,14 +116,14 @@
 .pbHide #pbCaption{ position:absolute; z-index:999; margin-bottom:5px; bottom:-120px; width:100%; overflow:hidden; transition:.4s; }
 .show.on #pbCaption{ bottom:0; transition-delay:.5s; }
 	#pbOverlay.thumbs #pbCaption label{ display:block; }
-	#pbCaption label{ display:none; position:relative; z-index:1; top:-5px; float:right; width:60px; margin-right:10px; color:#FFF; opacity:0.3; transition:0.2s; cursor:pointer; }
+	#pbCaption label{ display:none; position:relative; z-index:1; top:-5px; float:right; width:60px; margin-right:10px; color:#FFF; opacity:.3; transition:.2s; cursor:pointer; }
 	#pbCaption label:after{ background:#FFF; box-shadow:12px 0 #FFF, -12px 0 #FFF; content:""; display:inline-block; height:0; padding:10px 5px; text-align:right; vertical-align:top; width:0; }
 	#pbCaption label:hover{ opacity:1; }
 	#pbCaption .title,
 	#pbCaption .counter{ display:inline-block; color:#FFF; margin:0 6px; }
 	#pbCaption .counter{ display:none; opacity:.55; }
 	.hasCounter #pbCaption .counter{ display:inline-block; }
-	.pbCaptionText{ transition:.3s; opacity:0.9; font-weight:bold; font-size:.9em; text-shadow:1px 1px 1px rgba(0,0,0,.5); padding-left:60px; } /* padding-left from <label> */
+	.pbCaptionText{ transition:.3s; opacity:.9; font-weight:bold; font-size:.9em; text-shadow:1px 1px 1px rgba(0,0,0,.5); padding-left:60px; } /* padding-left from <label> */
 	.pbCaptionText.change{ -webkit-transform:translateY(25px); transform:translateY(25px); opacity:0; }
 
 .mobile #pbCaption label{ display:none; z-index:-1; color:red; }
@@ -133,7 +133,7 @@
 #pbThumbsToggler:checked ~ #pbCaption .pbThumbs{ margin:0; }
 #pbThumbsToggler:checked ~ .pbWrapper{ margin-top:-50px; padding:50px 0; }
 
-.pbThumbs{ display:none; transition:0.35s; -webkit-overflow-scrolling:touch; }
+.pbThumbs{ display:none; transition:.35s; -webkit-overflow-scrolling:touch; }
 .thumbs .pbThumbs{ display:block; width:100%; padding:5px 0 2px; margin-bottom:-100px; overflow:hidden; }
 .mobile .pbThumbs{ overflow:auto; }
 .pbThumbs:hover{ clear:both; }
@@ -142,10 +142,10 @@
 		.pbThumbs li{ display:inline-block; vertical-align:bottom; height:70%; opacity:.6; text-align:center; position:relative; transition:.15s; }
 		.pbThumbs li.active{ height:100%; opacity:1; }
 		.pbThumbs li:hover{ height:100%; opacity:1; }
-		.pbThumbs li.video::before{ content:'\25BA'; color:#FFF; font-size:20px; height:20px; width:20px; line-height:0.9; position:absolute; bottom:4px; left:7px; background:rgba(0,0,0,0.4); box-shadow:0 0 0 3px rgba(0,0,0,0.4); border-radius:0 3px 0 0; pointer-events:none; }
+		.pbThumbs li.video::before{ content:'\25BA'; color:#FFF; font-size:20px; height:20px; width:20px; line-height:.9; position:absolute; bottom:4px; left:7px; background:rgba(0,0,0,.4); box-shadow:0 0 0 3px rgba(0,0,0,.4); border-radius:0 3px 0 0; pointer-events:none; }
 			.pbThumbs a{ height:100%; padding:0 2px; display:block; -moz-user-select:none; }
 			.pbThumbs li:hover a{  }
-				.pbThumbs img{ height:96%; min-height:95.9%; border:2px solid #FFF; max-width:none; border-radius:0; transition:0.15s; }
+				.pbThumbs img{ height:96%; min-height:95.9%; border:2px solid #FFF; max-width:none; border-radius:0; transition:.15s; }
 				.pbThumbs li:hover img{ min-height:96%; } /* fix a bug in Chrome and Opera */
 				.pbThumbs li.fast a img{ transition:none; }
 				.pbThumbs li.active a img{ border-color:#D8FF16; min-height:96%; }
@@ -156,7 +156,7 @@
 #pbOverlay.on .prevNext:hover{ opacity:.5; filter:alpha(opacity=50); }
 #pbOverlay.on .prevNext:hover:active{ transition:80ms; opacity:1; filter:alpha(opacity=100); text-shadow:0 0 16px #FFF, 0 0 10px #000; }
 	.prevNext b{ display:inline-block; vertical-align:middle; transition:.2s ease-in; }
-	.prevNext:hover b{ transition:.2s cubic-bezier(0.095, 0.870, 0.485, 0.985); }
+	.prevNext:hover b{ transition:.2s cubic-bezier(.095, .870, .485, .985); }
 	#pbPrevBtn b{ transform:scale(.4) translateX(350px); -webkit-transform:scale(.4) translateX(350px); }
 	#pbNextBtn b{ transform:scale(.4) translateX(-350px); -webkit-transform:scale(.4) translateX(-350px); }
 	/* */
