--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -79,13 +79,13 @@
 		transition:30ms;
 	}
 
-
+	/* Content effects */
 	.pbWrapper > *,
 	.pbHide .pbWrapper > .prepare{ opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
 	.on .pbWrapper > *{ transition-delay:0s; -ms-transition-delay:0s; }
 	.pbWrapper .zoomable{ -ms-transition:0s; -webkit-transition:0s; transition:0s; position:relative; z-index:9; }
-
 	.pbHide .pbWrapper > *{ -webkit-transform:scale(1.2); transform:scale(1.2); transform:none\9; opacity:0; -ms-transition:.4s ease-out; transition:.4s ease-out; }
+
 
 
 /*-- close button --*/
