--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -15,7 +15,6 @@
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e2000000', endColorstr='#e2000000');
 	/* background:radial-gradient(rgba(0,0,0,.6) 0%, rgba(0,0,0,.9) 100%); */
 	-webkit-transform:translate3d(0);
-	-ms-transition:opacity 300ms ease;
 	transition:opacity 300ms ease;
 }
 #pbOverlay.msie{ background-color:rgba(0,0,0,.6); }
@@ -62,7 +61,6 @@
 
 	.pbWrapper > div,
 	.pbWrapper > img{
-		-ms-transition:.3s .5s ease-out;
 		transition:.8s .5s cubic-bezier(.1, .87, .48, 1);
 
 		-webkit-transform:none;
@@ -82,9 +80,9 @@
 	/* Content effects */
 	.pbWrapper > *,
 	.pbHide .pbWrapper > .prepare{ opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
-	.on .pbWrapper > *{ transition-delay:0s; -ms-transition-delay:0s; }
-	.pbWrapper .zoomable{ -ms-transition:0s; -webkit-transition:0s; transition:0s; position:relative; z-index:9; }
-	.pbHide .pbWrapper > *{ -webkit-transform:scale(1.2); transform:scale(1.2); transform:none\9; opacity:0; -ms-transition:.4s ease-out; transition:.4s ease-out; }
+	.on .pbWrapper > *{ transition-delay:0s; }
+	.pbWrapper .zoomable{ -webkit-transition:0s; transition:0s; position:relative; z-index:9; }
+	.pbHide .pbWrapper > *{ -webkit-transform:scale(1.2); transform:scale(1.2); transform:none\9; opacity:0; transition:.4s ease-out; }
 
 
 
@@ -107,8 +105,8 @@
 	#pbAutoplayBtn:active:before{ text-shadow:0 0 3px #FFF, 0 0 6px #FFF; }
 	#pbAutoplayBtn.play:before{ content:'\25BA'; }
 
-	#pbAutoplayBtn .pbProgress{ display:none\9; width:100%; height:100%; overflow:hidden; position:absolute; padding:6px; top:0; left:0; opacity:.2; transform:rotateZ(0deg); -webkit-transform:rotateZ(0deg); -ms-transform:rotateZ(0deg); -webkit-transform-origin:0 0; -ms-transform-origin:0 0; transform-origin:0 0; -webkit-transition:.3s; -ms-transition:.3s; transition:.3s; }
-	.mobile #pbAutoplayBtn .pbProgress{ -webkit-transition:0s; -ms-transition:0s; transition:0s; }
+	#pbAutoplayBtn .pbProgress{ display:none\9; width:100%; height:100%; overflow:hidden; position:absolute; padding:6px; top:0; left:0; opacity:.2; transform:rotateZ(0deg); -webkit-transform:rotateZ(0deg); -ms-transform:rotateZ(0deg); -webkit-transform-origin:0 0; -ms-transform-origin:0 0; transform-origin:0 0; -webkit-transition:.3s; transition:.3s; }
+	.mobile #pbAutoplayBtn .pbProgress{ -webkit-transition:0s; transition:0s; }
 	#pbAutoplayBtn.playing .pbProgress{ -webkit-transform:rotateZ(90deg); -ms-transform:rotateZ(90deg); transform:rotateZ(90deg); }
 	#pbAutoplayBtn .pbProgress:before{ content:''; position:absolute; right:0; bottom:0; width:200%; height:200%; border-radius:50%; box-shadow:0 0 0 8px #FFF inset; }
 
