--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -17,6 +17,7 @@
 	-webkit-transform:translate3d(0);
 	transition:opacity 300ms ease;
 }
+
 #pbOverlay.msie{ background-color:rgba(0,0,0,.6); }
 .msie.pbLoading .pbWrapper{ background:url('../images/loading.gif') no-repeat center center; }
 
@@ -41,6 +42,9 @@
 @keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); transform:scale(.85); } }
 @-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(.85); } }
 
+#pbOverlay button{ outline:0 !important; box-shadow:0; }
+
+
 .pbWrapper{ -moz-box-sizing:border-box; box-sizing:border-box; transform:rotate(0deg); vertical-align:middle; height:100%; perspective:1200px; position:relative;  }
 .video > .pbWrapper{ z-index:11; display:inline-block; }
 	/*#pbOverlay.error .pbWrapper{ display:inline-block; width:100%; }*/
@@ -61,7 +65,7 @@
 
 	.pbWrapper > div,
 	.pbWrapper > img{
-		transition:.8s .5s cubic-bezier(.1, .87, .48, 1);
+		transition:.5s .5s cubic-bezier(.1, .87, .48, 1);
 
 		-webkit-transform:none;
 		-ms-transform:none;
@@ -69,6 +73,7 @@
 
 		-webkit-backface-visibility:hidden;
 		box-shadow:0 0 20px #000;
+		opacity: 1;
 	}
 
 	/* FOR MOBILE */
@@ -79,9 +84,10 @@
 
 	/* Content effects */
 	.pbWrapper > *,
-	.pbHide .pbWrapper > .prepare{ opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
+	.pbHide .pbWrapper > .prepare{ opacity:0; vertical-align:middle; -webkit-transform:scale(.2) rotateX(80deg); -ms-transform:scale(.2) rotateX(80deg); transform:scale(.2) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
 	.on .pbWrapper > *{ transition-delay:0s; }
 	.pbWrapper .zoomable{ -webkit-transition:0s; transition:0s; position:relative; z-index:9; }
+	.pbWrapper .rotating{ -webkit-transition:.25s cubic-bezier(.4,.04,0,1); transition:.25s cubic-bezier(.4,.04,0,1); }
 	.pbHide .pbWrapper > *{ -webkit-transform:scale(1.2); transform:scale(1.2); transform:none\9; opacity:0; transition:.4s ease-out; }
 
 
@@ -111,18 +117,22 @@
 	#pbAutoplayBtn .pbProgress:before{ content:''; position:absolute; right:0; bottom:0; width:200%; height:200%; border-radius:50%; box-shadow:0 0 0 8px #FFF inset; }
 
 #pbCaption,
-.pbHide #pbCaption{ position:absolute; z-index:999; margin-bottom:5px; bottom:-120px; width:100%; overflow:hidden; transition:.4s; }
+.pbHide #pbCaption{ position:absolute; z-index:999; margin-bottom:5px; bottom:-120px; width:100%; overflow:hidden; transform:translateZ(0px); transition:.4s; }
 .show.on #pbCaption{ bottom:0; transition-delay:.5s; }
 	#pbOverlay.thumbs #pbCaption label{ display:block; }
-	#pbCaption label{ display:none; position:relative; z-index:1; top:-5px; float:right; width:60px; margin-right:10px; color:#FFF; opacity:.3; transition:.2s; cursor:pointer; }
+	#pbCaption label{ display:none; position:relative; z-index:1; top:6px; float:right; width:60px; margin-right:10px; color:#FFF; opacity:.3; transition:.2s; cursor:pointer; }
 	#pbCaption label:after{ background:#FFF; box-shadow:12px 0 #FFF, -12px 0 #FFF; content:""; display:inline-block; height:0; padding:10px 5px; text-align:right; vertical-align:top; width:0; }
 	#pbCaption label:hover{ opacity:1; }
 	#pbCaption .title,
 	#pbCaption .counter{ display:inline-block; color:#FFF; margin:0 6px; }
 	#pbCaption .counter{ display:none; opacity:.55; }
 	.hasCounter #pbCaption .counter{ display:inline-block; }
-	.pbCaptionText{ transition:.3s; opacity:.9; font-weight:bold; font-size:.9em; text-shadow:1px 1px 1px rgba(0,0,0,.5); padding-left:60px; } /* padding-left from <label> */
+	.pbCaptionText{ display:inline-block; transition:.3s; opacity:.9; font-weight:bold; vertical-align:middle; text-shadow:1px 1px 1px rgba(0,0,0,.5); padding-left:60px; } /* padding-left from <label> */
 	.pbCaptionText.change{ -webkit-transform:translateY(25px); transform:translateY(25px); opacity:0; }
+	#pbCaption .rotateBtn{ display:none; background:none; border:0; font:800 1.7em/0 Arial; vertical-align:middle; color:rgba(255,255,255,.5); width:1.1em; height:1.1em; padding:0; border-radius:50%; background:rgba(0,0,0,.2); cursor:pointer; transition:.15s ease-out; }
+	#pbCaption .rotateBtn.show{ display:block; float:right; }
+	#pbCaption .rotateBtn:hover{ color:rgba(255,255,255,.7); }
+	#pbCaption .rotateBtn:active{ color:white; background:rgba(0,0,0,.4); }
 
 .mobile #pbCaption label{ display:none; z-index:-1; color:red; }
 .mobile .pbCaptionText{ padding:0; }
